@@ -84,8 +84,8 @@ public class MavenProjectDependencyProcessor {
 		Collection<IInstallableUnit> availableIUs = projectIUMap.values().stream().flatMap(Collection::stream)
 				.collect(Collectors.toSet());
 		Map<MavenProject, ProjectDependencies> projectDependenciesMap = computeProjectDependencies(projects,
-				new CollectionResult<IInstallableUnit>(availableIUs), projectIUMap);
-		Map<IInstallableUnit, MavenProject> iuProjectMap = new HashMap<IInstallableUnit, MavenProject>();
+				new CollectionResult<>(availableIUs), projectIUMap);
+		Map<IInstallableUnit, MavenProject> iuProjectMap = new HashMap<>();
 		for (var entry : projectIUMap.entrySet()) {
 			MavenProject mavenProject = entry.getKey();
 			for (IInstallableUnit iu : entry.getValue()) {
@@ -140,7 +140,7 @@ public class MavenProjectDependencyProcessor {
 	private Map<MavenProject, ProjectDependencies> computeProjectDependencies(Collection<MavenProject> projects,
 			IQueryable<IInstallableUnit> avaiableIUs, Map<MavenProject, Collection<IInstallableUnit>> projectIUMap)
 			throws CoreException {
-		List<CoreException> errors = new CopyOnWriteArrayList<CoreException>();
+		List<CoreException> errors = new CopyOnWriteArrayList<>();
 		Map<MavenProject, ProjectDependencies> result = new ConcurrentHashMap<>();
 		projects.parallelStream().unordered().takeWhile(nil -> errors.isEmpty()).forEach(project -> {
 			try {
@@ -186,13 +186,13 @@ public class MavenProjectDependencyProcessor {
 		if (projectUnits.isEmpty()) {
 			return EMPTY_DEPENDENCIES;
 		}
-		Set<IInstallableUnit> resolved = new LinkedHashSet<IInstallableUnit>(
+		Set<IInstallableUnit> resolved = new LinkedHashSet<>(
 				slicer.computeDirectDependencies(projectUnits, avaiableIUs).toSet());
 		resolved.removeAll(projectUnits);
 		// now we need to filter all fragments that we are a host!
 		// for example SWT creates an explicit requirement to its fragments and we don't
 		// want them included directly
-		Set<IInstallableUnit> projectFragments = new HashSet<IInstallableUnit>();
+		Set<IInstallableUnit> projectFragments = new HashSet<>();
 		for (Iterator<IInstallableUnit> iterator = resolved.iterator(); iterator.hasNext();) {
 			IInstallableUnit unit = iterator.next();
 			if (hasAnyHost(unit, projectUnits)) {
@@ -220,17 +220,15 @@ public class MavenProjectDependencyProcessor {
 
 	private static Stream<IProvidedCapability> getFragmentCapability(IInstallableUnit installableUnit) {
 
-		return installableUnit.getProvidedCapabilities().stream().filter(cap -> {
-			return BundlesAction.CAPABILITY_NS_OSGI_FRAGMENT.equals(cap.getNamespace());
-		});
+		return installableUnit.getProvidedCapabilities().stream()
+				.filter(cap -> BundlesAction.CAPABILITY_NS_OSGI_FRAGMENT.equals(cap.getNamespace()));
 	}
 
 	private static Stream<IRequirement> getFragmentHostRequirement(IInstallableUnit installableUnit) {
 		return getFragmentCapability(installableUnit).map(provided -> {
 			String hostName = provided.getName();
 			for (IRequirement requirement : installableUnit.getRequirements()) {
-				if (requirement instanceof IRequiredCapability) {
-					IRequiredCapability requiredCapability = (IRequiredCapability) requirement;
+				if (requirement instanceof IRequiredCapability requiredCapability) {
 					if (hostName.equals(requiredCapability.getName())) {
 						return requirement;
 					}
@@ -294,7 +292,7 @@ public class MavenProjectDependencyProcessor {
 		default Collection<MavenProject> getDependencyProjects(MavenProject mavenProject) {
 			ProjectDependencies projectDependecies = getProjectDependecies(mavenProject);
 			List<MavenProject> list = projectDependecies.getDependencies().stream()
-					.flatMap(dependency -> getProject(dependency).stream()).distinct().collect(Collectors.toList());
+					.flatMap(dependency -> getProject(dependency).stream()).distinct().toList();
 			if (isFragment(mavenProject)) {
 				return list;
 			}
@@ -305,7 +303,7 @@ public class MavenProjectDependencyProcessor {
 				}
 				return Stream.concat(Stream.of(project),
 						dependecies.getFragments().stream().flatMap(dependency -> getProject(dependency).stream()));
-			}).distinct().collect(Collectors.toList());
+			}).distinct().toList();
 		}
 
 		/**
