@@ -18,7 +18,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.apache.maven.execution.MavenSession;
 import org.apache.maven.project.MavenProject;
@@ -64,9 +63,9 @@ public class TargetPlatformConfigurationInstallableUnitProvider implements Insta
         }
         TargetPlatformConfiguration configuration = configurationReader.getTargetPlatformConfiguration(session,
                 project);
-        List<IRequirement> extraRequirements = configuration.getExtraRequirements().stream().map(key -> {
-            return createRequirementFor(key.getType(), key.getId(), new VersionRange(key.getVersion()));
-        }).filter(Objects::nonNull).collect(Collectors.toList());
+        List<IRequirement> extraRequirements = configuration.getExtraRequirements().stream()
+                .map(key -> createRequirementFor(key.getType(), key.getId(), new VersionRange(key.getVersion())))
+                .filter(Objects::nonNull).toList();
         if (extraRequirements.isEmpty()) {
             return Collections.emptyList();
         }
@@ -74,22 +73,17 @@ public class TargetPlatformConfigurationInstallableUnitProvider implements Insta
     }
 
     private static IRequirement createRequirementFor(String type, String id, VersionRange versionRange) {
-        switch (type) {
-        case ArtifactType.TYPE_ECLIPSE_PLUGIN:
-            return MetadataFactory.createRequirement(BundlesAction.CAPABILITY_NS_OSGI_BUNDLE, id, versionRange, null,
-                    false, true);
-        case ArtifactType.TYPE_ECLIPSE_FEATURE:
-            return MetadataFactory.createRequirement(IInstallableUnit.NAMESPACE_IU_ID, id + ".feature.group",
-                    versionRange, null, false, true);
-        case ArtifactType.TYPE_INSTALLABLE_UNIT:
-            return MetadataFactory.createRequirement(IInstallableUnit.NAMESPACE_IU_ID, id, versionRange, null, false,
-                    true);
-        case ArtifactType.TYPE_ECLIPSE_PRODUCT:
-            return MetadataFactory.createRequirement(IInstallableUnit.NAMESPACE_IU_ID, id, versionRange, null, false,
-                    true);
-        default:
-            return null;
-        }
+        return switch (type) {
+        case ArtifactType.TYPE_ECLIPSE_PLUGIN -> MetadataFactory
+                .createRequirement(BundlesAction.CAPABILITY_NS_OSGI_BUNDLE, id, versionRange, null, false, true);
+        case ArtifactType.TYPE_ECLIPSE_FEATURE -> MetadataFactory.createRequirement(IInstallableUnit.NAMESPACE_IU_ID,
+                id + ".feature.group", versionRange, null, false, true);
+        case ArtifactType.TYPE_INSTALLABLE_UNIT -> MetadataFactory.createRequirement(IInstallableUnit.NAMESPACE_IU_ID,
+                id, versionRange, null, false, true);
+        case ArtifactType.TYPE_ECLIPSE_PRODUCT -> MetadataFactory.createRequirement(IInstallableUnit.NAMESPACE_IU_ID,
+                id, versionRange, null, false, true);
+        default -> null;
+        };
     }
 
     private static IInstallableUnit createUnitRequiring(Collection<IRequirement> requirements) {
