@@ -364,9 +364,9 @@ public abstract class AbstractOsgiCompilerMojo extends AbstractCompilerMojo
             this.currentOutputDirectory = entry.getKey();
             this.currentOutputDirectory.mkdirs();
             this.currentSourceRoots = entry.getValue().stream().map(SourcepathEntry::getSourcesRoot)
-                    .map(root -> new File(root.toURI().normalize()).toString()).collect(Collectors.toList());
+                    .map(root -> new File(root.toURI().normalize()).toString()).toList();
             this.currentExcludes = entry.getValue().stream().map(SourcepathEntry::getExcludes).filter(Objects::nonNull)
-                    .flatMap(Collection::stream).distinct().collect(Collectors.toList());
+                    .flatMap(Collection::stream).distinct().toList();
             super.execute();
             doCopyResources();
         }
@@ -408,7 +408,7 @@ public abstract class AbstractOsgiCompilerMojo extends AbstractCompilerMojo
                                     e.printStackTrace();
                                     return null;
                                 }
-                            }).filter(Objects::nonNull).collect(Collectors.toList());
+                            }).filter(Objects::nonNull).toList();
                     manifestBREEs = ExecutionEnvironmentUtils.getProfileNames(toolchainManager, session, logger)
                             .stream() //
                             .map(name -> name.split("-")) //
@@ -499,8 +499,7 @@ public abstract class AbstractOsgiCompilerMojo extends AbstractCompilerMojo
                 String basedir = repository.getBasedir();
                 Collection<ProjectClasspathEntry> classpathEntries = getEclipsePluginProject().getClasspathEntries();
                 for (ProjectClasspathEntry cpe : classpathEntries) {
-                    if (cpe instanceof M2ClasspathVariable) {
-                        M2ClasspathVariable cpv = (M2ClasspathVariable) cpe;
+                    if (cpe instanceof M2ClasspathVariable cpv) {
                         String entry = new File(basedir, cpv.getRepositoryPath()).getAbsolutePath();
                         if (seen.add(entry)) {
                             classpath.add(entry);
@@ -608,8 +607,7 @@ public abstract class AbstractOsgiCompilerMojo extends AbstractCompilerMojo
         configureCompilerLog(compilerConfiguration);
         Collection<ProjectClasspathEntry> classpathEntries = getEclipsePluginProject().getClasspathEntries();
         for (ProjectClasspathEntry cpe : classpathEntries) {
-            if (cpe instanceof JREClasspathEntry) {
-                JREClasspathEntry jreClasspathEntry = (JREClasspathEntry) cpe;
+            if (cpe instanceof JREClasspathEntry jreClasspathEntry) {
                 if (jreClasspathEntry.isModule()) {
                     Collection<String> modules = jreClasspathEntry.getLimitModules();
                     if (!modules.isEmpty()) {
@@ -802,16 +800,17 @@ public abstract class AbstractOsgiCompilerMojo extends AbstractCompilerMojo
 
                 for (Artifact b : result.getArtifacts()) {
                     ReactorProject bProject = null;
-                    if (b instanceof ProjectArtifact) {
-                        bProject = DefaultReactorProject.adapt(((ProjectArtifact) b).getProject());
+                    if (b instanceof ProjectArtifact projectArtifact) {
+                        bProject = DefaultReactorProject.adapt(projectArtifact.getProject());
                     }
                     ArrayList<File> bLocations = new ArrayList<>();
                     bLocations.add(b.getFile()); // TODO properly handle multiple project locations maybe
-                    classpath.add(new DefaultClasspathEntry(bProject,
-                            ((OsgiBundleProject) getBundleProject()).readOrCreateArtifactKey(b.getFile(), () -> {
-                                return new DefaultArtifactKey(b.getType(), b.getGroupId() + "." + b.getArtifactId(),
-                                        b.getVersion());
-                            }), bLocations, null));
+                    classpath
+                            .add(new DefaultClasspathEntry(bProject,
+                                    ((OsgiBundleProject) getBundleProject()).readOrCreateArtifactKey(b.getFile(),
+                                            () -> new DefaultArtifactKey(b.getType(),
+                                                    b.getGroupId() + "." + b.getArtifactId(), b.getVersion())),
+                                    bLocations, null));
                 }
             }
         }
