@@ -38,16 +38,14 @@ import org.codehaus.plexus.component.annotations.Component;
 import org.codehaus.plexus.component.annotations.Requirement;
 import org.codehaus.plexus.logging.Logger;
 import org.codehaus.plexus.util.xml.pull.XmlPullParserException;
-import org.eclipse.sisu.equinox.embedder.EmbeddedEquinox;
-import org.eclipse.sisu.equinox.embedder.EquinoxLifecycleListener;
 import org.eclipse.tycho.core.maven.MavenArtifactFacade;
 import org.eclipse.tycho.core.shared.DependencyResolutionException;
 import org.eclipse.tycho.core.shared.MavenArtifactRepositoryReference;
 import org.eclipse.tycho.core.shared.MavenDependenciesResolver;
 import org.eclipse.tycho.core.shared.MavenModelFacade;
 
-@Component(role = EquinoxLifecycleListener.class, hint = "MavenDependenciesResolver")
-public class MavenDependenciesResolverConfigurer implements MavenDependenciesResolver, EquinoxLifecycleListener {
+@Component(role = MavenDependenciesResolver.class)
+public class MavenDependenciesResolverConfigurer implements MavenDependenciesResolver {
 
     @Requirement
     private Logger logger;
@@ -89,7 +87,7 @@ public class MavenDependenciesResolverConfigurer implements MavenDependenciesRes
         });
         request.setLocalRepository(mavenSession.getLocalRepository());
         request.setResolveTransitively(depth > 0);
-        if (additionalRepositories != null && additionalRepositories.size() > 0) {
+        if (additionalRepositories != null && !additionalRepositories.isEmpty()) {
             List<ArtifactRepository> repositories = new ArrayList<>(
                     mavenSession.getCurrentProject().getRemoteArtifactRepositories());
             for (MavenArtifactRepositoryReference reference : additionalRepositories) {
@@ -107,8 +105,7 @@ public class MavenDependenciesResolverConfigurer implements MavenDependenciesRes
         if (result.hasExceptions()) {
             throw new DependencyResolutionException("resolving " + artifact + " failed!", result.getExceptions());
         }
-        return result.getArtifacts().stream().filter(a -> a.getFile() != null).map(MavenArtifactFacade::new)
-                .collect(Collectors.toList());
+        return result.getArtifacts().stream().filter(a -> a.getFile() != null).map(MavenArtifactFacade::new).toList();
     }
 
     protected boolean isValidScope(Artifact artifact, Collection<String> scopes) {
@@ -131,19 +128,10 @@ public class MavenDependenciesResolverConfigurer implements MavenDependenciesRes
     }
 
     protected MavenSession getMavenSession(Object session) {
-        MavenSession mavenSession;
-        if (session instanceof MavenSession) {
-            mavenSession = (MavenSession) session;
-        } else {
-            mavenSession = Objects.requireNonNull(context.getSession(),
-                    "Can't acquire maven session from context, called outside maven thread context?");
-        }
-        return mavenSession;
-    }
-
-    @Override
-    public void afterFrameworkStarted(EmbeddedEquinox framework) {
-        framework.registerService(MavenDependenciesResolver.class, this);
+        return session instanceof MavenSession mavenSession //
+                ? mavenSession
+                : Objects.requireNonNull(context.getSession(),
+                        "Can't acquire maven session from context, called outside maven thread context?");
     }
 
     @Override
